# posterizatrion_mitigation

./: .clang-format  .gitignore  CMakeLists.txt  README.md
analysis/: bin2nc.py  tesh.sh
include/: compensation.hpp  compensation_idw.hpp  compensation_idw_copy.hpp  compensation_rbf.hpp  compute_grad.hpp  edt_transform.hpp  edt_transform_omp.hpp  get_boundary.hpp  test_2d.cpp  test_3d.cpp  test_edt_2d.cpp
include/SZ3/quantizer/: IntegerQuantizer.hpp  Quantizer.hpp
include/mpi/: boundary.hpp  compensation.hpp  data_exchange.hpp  edt.hpp  edt_opt.hpp  mpi_datatype.hpp  stats.hpp
include/utils/: file_utils.hpp  qcat_ssim.hpp  qcat_ssim_file.hpp  stats.hpp  timer.hpp
scripts/data/data_info/: datainfo.py  download.py
scripts/test_mpi/distortion/: plot.py  plot.sh  sbatch_8x8x8.sh
scripts/test_mpi/strong_scaling/: dispatch.sh  dispatch_em.py  dispatch_full.py  dispatch_opt.py  plot.py
scripts/test_mpi/weak_scaling/: dispatch.sh  dispatch_em.py  dispatch_full.py  dispatch_opt.py  plot.py
scripts/test_omp_time/: plot.py  run_edt_3d.py
scripts/test_rate_distortion/: configs.toml
scripts/test_rate_distortion/cusz_compression/: get_cr_files.py  run.py  run.sh  run_hurricane.sh  run_jhtdb_pressuree.sh  run_miranda.sh  run_nyx.sh
scripts/test_rate_distortion/cuszp_compression/: get_cr_files.py  run.py  run.sh  run_hurricane.sh  run_jhtdb_pressure.sh  run_miranda.sh  run_nyx.sh
scripts/test_rate_distortion/distortion/: dispatch_edt.sh  dispatch_gaussian.sh  plot.py  run_edt_3d.py  run_gaussian.py
test/: CMakeLists.txt  debug.ipynb  debug_hurricane.ipynb  direct_quantize.cpp  libqcatssim.cpp  tesh.sh  test.sh  test_2d.cpp  test_3d.cpp  test_3d_as_slice.cpp  test_3d_idw.cpp  test_3d_rbf.cpp  test_3d_slices.cpp  test_quantize_and_edt.cpp  test_roi.ipynb  test_ssim.cpp  test_ssim_file.cpp  test_torch.ipynb  torch_rbf.cpp
test_mpi/: CMakeLists.txt  test_approximate_parallel.cpp  test_boundary_mpi.cpp  test_compensation_opt.cpp  test_compensation_parallel.cpp  test_data_exchange.cpp  test_decompose_file.cpp  test_edt_mpi.cpp  test_edt_mpi_function.cpp  test_embassingly_parallel.cpp  test_exact_parallel.cpp  test_merge_file.cpp  test_mpi_ranks.cpp  test_quantizer_mpi.cpp  test_sequantial.cpp  test_ssim_mpi.cpp  test_ssim_mpi_merged_file.cpp  test_ssim_segmentation.cpp
